Fix issue with scaling on mobile devices

--- a/public/style/blog-detail.css
+++ b/public/style/blog-detail.css
@@ -51,7 +51,7 @@ pre[class*="language-"] *::selection {
 pre[class*="language-"] {
     padding: 1em;
     margin: 0.5em 0;
-    overflow: auto;
+    overflow: scroll;
     border-radius: 0.3em;
 }
 
